--- a/index.html
+++ b/index.html
@@ -6,28 +6,36 @@
     <title>Limpon</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        a{text-decoration: none;} 
+    </style>
 </head>
 <body>
     <div>
         <div>
             <a href=""></a>
 
-            <ul>
+            <ul class="nav">
                 <li>Home</li>  
                 <li>Features</li>
                 <li>Video</li>
                 <li>Screens</li>
                 <li>Pricing</li>
                 <li>Team</li>
-                <li><a href="">Free Trail</a></li>
+                <li><a href="" class="btn-free">Free Trail</a></li>
             </ul>
         </div>
+    </div>
+    <div>
             <h1>Best Software Landingpage</h1>
         <div>
             <a href="get started now"></a>
 
             <a href="learn more"></a>
         </div>
+    </div>
+    <div>
+        <img src="" alt="">
     </div>
     <div>
         <ul>
@@ -38,43 +46,44 @@
         </ul>
     </div>
     <div>
-        <h2><span>Features</span>Best Features Ever Seen</h2>
-    </div>
-    <div>
-        <div></div>
-        <h3>Mobile Friednly Design</h3>
-        <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt. </p>
-        <a href="">Read More</a>
-    </div>
-    <div>
+        <div>
+             <h2><span class="fetur">Features</span>Best Features Ever Seen</h2>
+            <div>
+            <div></div>
+                <h3>Mobile Friednly Design</h3>
+                <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt. </p>
+                <a href="" class="read">Read More</a>
+        </div>
+        <div>
+        <div>
         <div></div>
         <h3>Well Documented</h3>
         <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-        <a href="">Read More</a>
-    </div>
-    <div>
-        <div></div>
-        <h3>Highly Customizeable</h3>
-        <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt. </p>
-        <a href="">Read More</a>
-    </div>
+        <a href="" class="read">Read More</a>
+        </div>
+        <div>
+            <div></div>
+            <h3>Highly Customizeable</h3>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt. </p>
+            <a href="" class="read">Read More</a>
+        </div>
     <div>
         <div></div>
         <h3>Easy To Edit</h3>
         <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt. </p>
-        <a href="">Read More</a>
+        <a href="" class="read">Read More</a>
     </div>
     <div>
         <div></div>
         <h3>Responsive Design</h3>
         <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-        <a href="">Read More</a>
+        <a href="" class="read">Read More</a>
     </div>
     <div>
         <div></div>
         <h3>24/7 Online Support</h3>
         <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
-        <a href="">Read More</a>
+        <a href="" class="read">Read More</a>
     </div>
     <div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
